add entropy split on columns to d tree scripts

--- a/model/decision_trees/decision_tree.ipynb
+++ b/model/decision_trees/decision_tree.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "3a71c23e",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('titanic.csv')\n",
+    "df = pd.read_csv('../titanic.csv')\n",
     "print(df.iloc[0,:].to_string())"
    ]
   },
@@ -77,64 +77,422 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "b9b92732",
    "metadata": {},
    "outputs": [],
    "source": [
     "def entropy(y):\n",
-    "    \"\"\"Calculate entropy of a binary target array.\"\"\"\n",
+    "    \"\"\"Calculate entropy of a binary target array.\n",
+    "    https://en.wikipedia.org/wiki/Entropy_(information_theory)#:~:text=The%20entropy%20can%20explicitly%20be%20written%20as%3A\n",
+    "    \"\"\"\n",
     "    p1 = np.mean(y)\n",
     "    p0 = 1 - p1\n",
     "    if p1 == 0 or p1 == 1:\n",
     "        return 0\n",
     "    return -p0 * np.log2(p0) - p1 * np.log2(p1)\n",
     "\n",
-    "def gini(y):\n",
-    "    \"\"\"Calculate Gini impurity of a binary target array.\"\"\"\n",
-    "    p1 = np.mean(y)\n",
-    "    p0 = 1 - p1\n",
-    "    return 1 - p0**2 - p1**2\n",
-    "\n",
     "def best_split(df, feature_col, target_col):\n",
-    "    \"\"\"Find the split point that maximizes information gain.\"\"\"\n",
-    "    values = np.sort(df[feature_col].unique())\n",
+    "    \"\"\"Find the split point that maximizes information gain.\n",
+    "    https://en.wikipedia.org/wiki/Decision_tree_learning#:~:text=Where-,weighted%20sum%20of%20entropies,-is%20given%20by\n",
+    "    \"\"\"\n",
+    "    values = np.sort(df[feature_col].unique()) # unique since otherwise for cat vars the split could be within the same category\n",
     "    split_points = (values[:-1] + values[1:]) / 2\n",
     "    best_gain = -1\n",
     "    best_split = None\n",
     "    base_entropy = entropy(df[target_col])\n",
-    "    base_gini = gini(df[target_col])\n",
     "    for split in split_points:\n",
     "        left = df[df[feature_col] <= split][target_col]\n",
     "        right = df[df[feature_col] > split][target_col]\n",
     "        weighted_entropy = (len(left) * entropy(left) + len(right) * entropy(right)) / len(df)\n",
-    "        weighted_gini = (len(left) * gini(left) + len(right) * gini(right)) / len(df)\n",
     "        info_gain = base_entropy - weighted_entropy\n",
-    "        gini_gain = base_gini - weighted_gini\n",
     "        if info_gain > best_gain:\n",
     "            best_gain = info_gain\n",
     "            best_split = split\n",
-    "            best_gini_gain = gini_gain\n",
-    "    return best_split, best_gain, best_gini_gain, weighted_gini"
+    "    return best_split, best_gain"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "066caa20",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best split: 2.5, Information gain: 0.0758, Gini gain: 0.0491, Weighted Gini: 0.4239\n"
-     ]
+     "data": {
+      "text/plain": [
+       "np.float64(2.5)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "split, gain, gini_gain, weighted_gini = best_split(df, 'pclass', 'survived')\n",
-    "print(f\"Best split: {split}, Information gain: {gain:.4f}, Gini gain: {gini_gain:.4f}, Weighted Gini: {weighted_gini:.4f}\")"
+    "split, gain = best_split(df, 'pclass', 'survived')\n",
+    "split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "781b4eb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\yzdom\\AppData\\Local\\Temp\\ipykernel_9820\\631441528.py:12: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '0' has dtype incompatible with bool, please explicitly cast to a compatible dtype first.\n",
+      "  splited_col[df[feature] <= split] = 0\n",
+      "C:\\Users\\yzdom\\AppData\\Local\\Temp\\ipykernel_9820\\631441528.py:12: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '0' has dtype incompatible with bool, please explicitly cast to a compatible dtype first.\n",
+      "  splited_col[df[feature] <= split] = 0\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "split",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "entropy_gain",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "gini_post_split",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "error",
+         "rawType": "object",
+         "type": "unknown"
+        }
+       ],
+       "ref": "5f216536-b351-4f18-80af-62bc550de48c",
+       "rows": [
+        [
+         "adult_male",
+         "0.5",
+         "0.23166399149283223",
+         "-0.5605406960023008",
+         null
+        ],
+        [
+         "pclass",
+         "2.5",
+         "0.07579362743608165",
+         "-0.3296424120410315",
+         null
+        ],
+        [
+         "fare",
+         "10.48125",
+         "0.06831748632561829",
+         "0.29953983318953115",
+         null
+        ],
+        [
+         "alone",
+         "0.5",
+         "0.029708896074360114",
+         "-0.2046304285303423",
+         null
+        ],
+        [
+         "splited_col",
+         "0.5",
+         "0.029708896074360114",
+         "-0.2046304285303423",
+         null
+        ],
+        [
+         "parch",
+         "0.5",
+         "0.015380754493137583",
+         "0.12927811331607697",
+         null
+        ],
+        [
+         "sibsp",
+         "3.5",
+         "0.01031782490184141",
+         "-0.04040839804429108",
+         null
+        ],
+        [
+         "sex",
+         null,
+         null,
+         null,
+         "unsupported operand type(s) for /: 'str' and 'int'"
+        ],
+        [
+         "age",
+         null,
+         null,
+         null,
+         "Input contains NaN."
+        ],
+        [
+         "embarked",
+         null,
+         null,
+         null,
+         "'<' not supported between instances of 'float' and 'str'"
+        ],
+        [
+         "class",
+         null,
+         null,
+         null,
+         "unsupported operand type(s) for /: 'str' and 'int'"
+        ],
+        [
+         "who",
+         null,
+         null,
+         null,
+         "unsupported operand type(s) for /: 'str' and 'int'"
+        ],
+        [
+         "deck",
+         null,
+         null,
+         null,
+         "'<' not supported between instances of 'str' and 'float'"
+        ],
+        [
+         "embark_town",
+         null,
+         null,
+         null,
+         "'<' not supported between instances of 'float' and 'str'"
+        ],
+        [
+         "alive",
+         null,
+         null,
+         null,
+         "unsupported operand type(s) for /: 'str' and 'int'"
+        ]
+       ],
+       "shape": {
+        "columns": 4,
+        "rows": 15
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>split</th>\n",
+       "      <th>entropy_gain</th>\n",
+       "      <th>gini_post_split</th>\n",
+       "      <th>error</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>adult_male</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.231664</td>\n",
+       "      <td>-0.560541</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pclass</th>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.075794</td>\n",
+       "      <td>-0.329642</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fare</th>\n",
+       "      <td>10.48125</td>\n",
+       "      <td>0.068317</td>\n",
+       "      <td>0.29954</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>alone</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.029709</td>\n",
+       "      <td>-0.20463</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>splited_col</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.029709</td>\n",
+       "      <td>-0.20463</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>parch</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.015381</td>\n",
+       "      <td>0.129278</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sibsp</th>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0.010318</td>\n",
+       "      <td>-0.040408</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sex</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>unsupported operand type(s) for /: 'str' and '...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>age</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Input contains NaN.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>embarked</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>'&lt;' not supported between instances of 'float'...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>class</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>unsupported operand type(s) for /: 'str' and '...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>who</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>unsupported operand type(s) for /: 'str' and '...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>deck</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>'&lt;' not supported between instances of 'str' a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>embark_town</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>'&lt;' not supported between instances of 'float'...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>alive</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>unsupported operand type(s) for /: 'str' and '...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                split entropy_gain gini_post_split  \\\n",
+       "adult_male        0.5     0.231664       -0.560541   \n",
+       "pclass            2.5     0.075794       -0.329642   \n",
+       "fare         10.48125     0.068317         0.29954   \n",
+       "alone             0.5     0.029709        -0.20463   \n",
+       "splited_col       0.5     0.029709        -0.20463   \n",
+       "parch             0.5     0.015381        0.129278   \n",
+       "sibsp             3.5     0.010318       -0.040408   \n",
+       "sex               NaN          NaN             NaN   \n",
+       "age               NaN          NaN             NaN   \n",
+       "embarked          NaN          NaN             NaN   \n",
+       "class             NaN          NaN             NaN   \n",
+       "who               NaN          NaN             NaN   \n",
+       "deck              NaN          NaN             NaN   \n",
+       "embark_town       NaN          NaN             NaN   \n",
+       "alive             NaN          NaN             NaN   \n",
+       "\n",
+       "                                                         error  \n",
+       "adult_male                                                 NaN  \n",
+       "pclass                                                     NaN  \n",
+       "fare                                                       NaN  \n",
+       "alone                                                      NaN  \n",
+       "splited_col                                                NaN  \n",
+       "parch                                                      NaN  \n",
+       "sibsp                                                      NaN  \n",
+       "sex          unsupported operand type(s) for /: 'str' and '...  \n",
+       "age                                        Input contains NaN.  \n",
+       "embarked     '<' not supported between instances of 'float'...  \n",
+       "class        unsupported operand type(s) for /: 'str' and '...  \n",
+       "who          unsupported operand type(s) for /: 'str' and '...  \n",
+       "deck         '<' not supported between instances of 'str' a...  \n",
+       "embark_town  '<' not supported between instances of 'float'...  \n",
+       "alive        unsupported operand type(s) for /: 'str' and '...  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import roc_auc_score\n",
+    "\n",
+    "target_col = 'survived'\n",
+    "feature_cols = [col for col in df.columns if col != target_col]\n",
+    "\n",
+    "split_results = {}\n",
+    "for feature in feature_cols:\n",
+    "    try:\n",
+    "        split, gain = best_split(df, feature, target_col)\n",
+    "        \n",
+    "        splited_col = df[feature].copy()\n",
+    "        splited_col[df[feature] <= split] = 0\n",
+    "        splited_col[df[feature] > split] = 1\n",
+    "        auc = roc_auc_score(y_true=df[target_col], y_score=splited_col)\n",
+    "        gini_post_split = 2 * auc - 1\n",
+    "\n",
+    "        split_results[feature] = {'split': split, 'entropy_gain': gain, 'gini_post_split': gini_post_split}\n",
+    "    except Exception as e:\n",
+    "        split_results[feature] = {'error': str(e)}\n",
+    "\n",
+    "res_df = pd.DataFrame(split_results).T\n",
+    "res_df = res_df.sort_values(by='entropy_gain', ascending=False)\n",
+    "res_df"
    ]
   },
   {
