add month end to time and reformat

--- a/data/cleanning/general.ipynb
+++ b/data/cleanning/general.ipynb
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import statsmodels.api as sm\n",
-    "from scipy import stats\n"
+    "from scipy import stats"
    ]
   },
   {
@@ -43,7 +43,7 @@
     "df = pd.read_csv(StringIO(_))\n",
     "\n",
     "df.columns = df.columns.str.strip().str.replace(\" \", \"_\").str.lower()\n",
-    "df.columns\n"
+    "df.columns"
    ]
   },
   {
