--- a/data/cleanning/monetary.ipynb
+++ b/data/cleanning/monetary.ipynb
@@ -118,8 +118,8 @@
     "df = pd.read_csv(StringIO(_))\n",
     "\n",
     "\n",
-    "df['col'] = df['col'].str.replace(r\"\\$|,\", \"\", regex=True).astype(float)\n",
-    "df\n"
+    "df[\"col\"] = df[\"col\"].str.replace(r\"\\$|,\", \"\", regex=True).astype(float)\n",
+    "df"
    ]
   },
   {
