--- a/data/cleanning/time.ipynb
+++ b/data/cleanning/time.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ce2bc3c9",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "81df5f7c",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
          "type": "integer"
         }
        ],
-       "ref": "7c40b314-36c5-4c62-9e67-5cb360a4c768",
+       "ref": "cbd6647d-af06-4b56-b70f-05f21f72874e",
        "rows": [
         [
          "0",
@@ -50,13 +50,18 @@
         ],
         [
          "1",
-         "2000-01-02 13:00:00",
+         "2000-05-01 01:00:00",
+         "3"
+        ],
+        [
+         "2",
+         "2000-12-01 13:00:00",
          "6"
         ]
        ],
        "shape": {
         "columns": 2,
-        "rows": 2
+        "rows": 3
        }
       },
       "text/html": [
@@ -90,7 +95,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2000-01-02 13:00:00</td>\n",
+       "      <td>2000-05-01 01:00:00</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2000-12-01 13:00:00</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -100,10 +110,11 @@
       "text/plain": [
        "                 time  other_col\n",
        "0 2000-01-01 12:00:00          5\n",
-       "1 2000-01-02 13:00:00          6"
+       "1 2000-05-01 01:00:00          3\n",
+       "2 2000-12-01 13:00:00          6"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +124,8 @@
     "_ = \"\"\"\n",
     "time,other_col\n",
     "01-01-2000 12:00:00,5\n",
-    "02-01-2000 13:00:00,6\n",
+    "01-05-2000 1:00:00,3\n",
+    "01-12-2000 13:00:00,6\n",
     "\"\"\"\n",
     "df = pd.read_csv(StringIO(_))\n",
     "\n",
@@ -124,6 +136,75 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "88481e79",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "eom",
+         "rawType": "datetime64[ns]",
+         "type": "datetime"
+        }
+       ],
+       "ref": "1655d395-5377-417e-a466-781fa5bd124c",
+       "rows": [
+        [
+         "0",
+         "2000-01-31 00:00:00"
+        ],
+        [
+         "1",
+         "2000-05-31 00:00:00"
+        ],
+        [
+         "2",
+         "2000-12-31 00:00:00"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 3
+       }
+      },
+      "text/plain": [
+       "0   2000-01-31\n",
+       "1   2000-05-31\n",
+       "2   2000-12-31\n",
+       "Name: eom, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# month end\n",
+    "import datetime\n",
+    "\n",
+    "def month_end(dt):\n",
+    "    if dt.month == 12:\n",
+    "        next_mth_day_1 = datetime.datetime(dt.year + 1, 1, 1)\n",
+    "    else:\n",
+    "        next_mth_day_1 = datetime.datetime(dt.year, dt.month + 1, 1)\n",
+    "    return next_mth_day_1 - datetime.timedelta(days=1)\n",
+    "\n",
+    "\n",
+    "df[\"eom\"] = df[\"time\"].apply(month_end)\n",
+    "df[\"eom\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "323085e5",
    "metadata": {},
    "outputs": [
@@ -147,6 +228,11 @@
          "type": "integer"
         },
         {
+         "name": "eom",
+         "rawType": "datetime64[ns]",
+         "type": "datetime"
+        },
+        {
          "name": "time_sydney",
          "rawType": "datetime64[ns, Australia/Sydney]",
          "type": "unknown"
@@ -157,26 +243,36 @@
          "type": "unknown"
         }
        ],
-       "ref": "5804f5d9-7dfb-4a29-a7b3-be4567e334ad",
+       "ref": "ebd57029-82bb-4d60-9ebd-d6053a41c1df",
        "rows": [
         [
          "0",
          "2000-01-01 12:00:00",
          "5",
+         "2000-01-31 00:00:00",
          "2000-01-01 12:00:00+11:00",
          "2000-01-01 12:00:00+08:00"
         ],
         [
          "1",
-         "2000-01-02 13:00:00",
+         "2000-05-01 01:00:00",
+         "3",
+         "2000-05-31 00:00:00",
+         "2000-05-01 01:00:00+10:00",
+         "2000-05-01 01:00:00+08:00"
+        ],
+        [
+         "2",
+         "2000-12-01 13:00:00",
          "6",
-         "2000-01-02 13:00:00+11:00",
-         "2000-01-02 13:00:00+08:00"
+         "2000-12-31 00:00:00",
+         "2000-12-01 13:00:00+11:00",
+         "2000-12-01 13:00:00+08:00"
         ]
        ],
        "shape": {
-        "columns": 4,
-        "rows": 2
+        "columns": 5,
+        "rows": 3
        }
       },
       "text/html": [
@@ -200,6 +296,7 @@
        "      <th></th>\n",
        "      <th>time</th>\n",
        "      <th>other_col</th>\n",
+       "      <th>eom</th>\n",
        "      <th>time_sydney</th>\n",
        "      <th>time_singapore</th>\n",
        "    </tr>\n",
@@ -209,31 +306,43 @@
        "      <th>0</th>\n",
        "      <td>2000-01-01 12:00:00</td>\n",
        "      <td>5</td>\n",
+       "      <td>2000-01-31</td>\n",
        "      <td>2000-01-01 12:00:00+11:00</td>\n",
        "      <td>2000-01-01 12:00:00+08:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2000-01-02 13:00:00</td>\n",
+       "      <td>2000-05-01 01:00:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2000-05-31</td>\n",
+       "      <td>2000-05-01 01:00:00+10:00</td>\n",
+       "      <td>2000-05-01 01:00:00+08:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2000-12-01 13:00:00</td>\n",
        "      <td>6</td>\n",
-       "      <td>2000-01-02 13:00:00+11:00</td>\n",
-       "      <td>2000-01-02 13:00:00+08:00</td>\n",
+       "      <td>2000-12-31</td>\n",
+       "      <td>2000-12-01 13:00:00+11:00</td>\n",
+       "      <td>2000-12-01 13:00:00+08:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 time  other_col               time_sydney  \\\n",
-       "0 2000-01-01 12:00:00          5 2000-01-01 12:00:00+11:00   \n",
-       "1 2000-01-02 13:00:00          6 2000-01-02 13:00:00+11:00   \n",
+       "                 time  other_col        eom               time_sydney  \\\n",
+       "0 2000-01-01 12:00:00          5 2000-01-31 2000-01-01 12:00:00+11:00   \n",
+       "1 2000-05-01 01:00:00          3 2000-05-31 2000-05-01 01:00:00+10:00   \n",
+       "2 2000-12-01 13:00:00          6 2000-12-31 2000-12-01 13:00:00+11:00   \n",
        "\n",
        "             time_singapore  \n",
        "0 2000-01-01 12:00:00+08:00  \n",
-       "1 2000-01-02 13:00:00+08:00  "
+       "1 2000-05-01 01:00:00+08:00  \n",
+       "2 2000-12-01 13:00:00+08:00  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "a35bbc67",
    "metadata": {},
    "outputs": [
@@ -271,6 +380,11 @@
          "type": "integer"
         },
         {
+         "name": "eom",
+         "rawType": "datetime64[ns]",
+         "type": "datetime"
+        },
+        {
          "name": "time_sydney",
          "rawType": "datetime64[ns, Australia/Sydney]",
          "type": "unknown"
@@ -286,28 +400,39 @@
          "type": "datetime"
         }
        ],
-       "ref": "ecaa17f1-f477-41e9-8622-445b00264945",
+       "ref": "f8ec9aa6-6764-4fb4-a0c5-c1f016e586fd",
        "rows": [
         [
          "0",
          "2000-01-01 12:00:00",
          "5",
+         "2000-01-31 00:00:00",
          "2000-01-01 12:00:00+11:00",
          "2000-01-01 12:00:00+08:00",
          "2000-01-01 01:00:00"
         ],
         [
          "1",
-         "2000-01-02 13:00:00",
+         "2000-05-01 01:00:00",
+         "3",
+         "2000-05-31 00:00:00",
+         "2000-05-01 01:00:00+10:00",
+         "2000-05-01 01:00:00+08:00",
+         "2000-04-30 15:00:00"
+        ],
+        [
+         "2",
+         "2000-12-01 13:00:00",
          "6",
-         "2000-01-02 13:00:00+11:00",
-         "2000-01-02 13:00:00+08:00",
-         "2000-01-02 02:00:00"
+         "2000-12-31 00:00:00",
+         "2000-12-01 13:00:00+11:00",
+         "2000-12-01 13:00:00+08:00",
+         "2000-12-01 02:00:00"
         ]
        ],
        "shape": {
-        "columns": 5,
-        "rows": 2
+        "columns": 6,
+        "rows": 3
        }
       },
       "text/html": [
@@ -331,6 +456,7 @@
        "      <th></th>\n",
        "      <th>time</th>\n",
        "      <th>other_col</th>\n",
+       "      <th>eom</th>\n",
        "      <th>time_sydney</th>\n",
        "      <th>time_singapore</th>\n",
        "      <th>time_sydney_utc_naive</th>\n",
@@ -341,41 +467,56 @@
        "      <th>0</th>\n",
        "      <td>2000-01-01 12:00:00</td>\n",
        "      <td>5</td>\n",
+       "      <td>2000-01-31</td>\n",
        "      <td>2000-01-01 12:00:00+11:00</td>\n",
        "      <td>2000-01-01 12:00:00+08:00</td>\n",
        "      <td>2000-01-01 01:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2000-01-02 13:00:00</td>\n",
+       "      <td>2000-05-01 01:00:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2000-05-31</td>\n",
+       "      <td>2000-05-01 01:00:00+10:00</td>\n",
+       "      <td>2000-05-01 01:00:00+08:00</td>\n",
+       "      <td>2000-04-30 15:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2000-12-01 13:00:00</td>\n",
        "      <td>6</td>\n",
-       "      <td>2000-01-02 13:00:00+11:00</td>\n",
-       "      <td>2000-01-02 13:00:00+08:00</td>\n",
-       "      <td>2000-01-02 02:00:00</td>\n",
+       "      <td>2000-12-31</td>\n",
+       "      <td>2000-12-01 13:00:00+11:00</td>\n",
+       "      <td>2000-12-01 13:00:00+08:00</td>\n",
+       "      <td>2000-12-01 02:00:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 time  other_col               time_sydney  \\\n",
-       "0 2000-01-01 12:00:00          5 2000-01-01 12:00:00+11:00   \n",
-       "1 2000-01-02 13:00:00          6 2000-01-02 13:00:00+11:00   \n",
+       "                 time  other_col        eom               time_sydney  \\\n",
+       "0 2000-01-01 12:00:00          5 2000-01-31 2000-01-01 12:00:00+11:00   \n",
+       "1 2000-05-01 01:00:00          3 2000-05-31 2000-05-01 01:00:00+10:00   \n",
+       "2 2000-12-01 13:00:00          6 2000-12-31 2000-12-01 13:00:00+11:00   \n",
        "\n",
        "             time_singapore time_sydney_utc_naive  \n",
        "0 2000-01-01 12:00:00+08:00   2000-01-01 01:00:00  \n",
-       "1 2000-01-02 13:00:00+08:00   2000-01-02 02:00:00  "
+       "1 2000-05-01 01:00:00+08:00   2000-04-30 15:00:00  \n",
+       "2 2000-12-01 13:00:00+08:00   2000-12-01 02:00:00  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# time zone convert to UTC then remove time zone info\n",
-    "df[\"time_sydney_utc_naive\"] = df[\"time_sydney\"].dt.tz_convert(\"UTC\").dt.tz_localize(None)\n",
-    "df\n"
+    "df[\"time_sydney_utc_naive\"] = (\n",
+    "    df[\"time_sydney\"].dt.tz_convert(\"UTC\").dt.tz_localize(None)\n",
+    ")\n",
+    "df"
    ]
   },
   {
