--- a/data/cleanning/time.ipynb
+++ b/data/cleanning/time.ipynb
@@ -190,11 +190,16 @@
     "# month end\n",
     "import datetime\n",
     "\n",
+    "# def month_end(dt):\n",
+    "#     if dt.month == 12:\n",
+    "#         next_mth_day_1 = datetime.datetime(dt.year + 1, 1, 1)\n",
+    "#     else:\n",
+    "#         next_mth_day_1 = datetime.datetime(dt.year, dt.month + 1, 1)\n",
+    "#     return next_mth_day_1 - datetime.timedelta(days=1)\n",
+    "\n",
     "def month_end(dt):\n",
-    "    if dt.month == 12:\n",
-    "        next_mth_day_1 = datetime.datetime(dt.year + 1, 1, 1)\n",
-    "    else:\n",
-    "        next_mth_day_1 = datetime.datetime(dt.year, dt.month + 1, 1)\n",
+    "    next_mth_dt = dt + pd.DateOffset(months=1)\n",
+    "    next_mth_day_1 = next_mth_dt.replace(day=1)\n",
     "    return next_mth_day_1 - datetime.timedelta(days=1)\n",
     "\n",
     "\n",
