--- a/data/analysis/sum_stats.ipynb
+++ b/data/analysis/sum_stats.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "df = pd.read_csv(\"../toydata/titanic.csv\")\n",
     "print(f\"{df.shape}\")\n",
-    "print(df.iloc[0,:].to_string())"
+    "print(df.iloc[0, :].to_string())"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['pclass_cat'] = df['pclass'].astype('category')"
+    "df[\"pclass_cat\"] = df[\"pclass\"].astype(\"category\")"
    ]
   },
   {
