--- a/data/wrangling/wrangle_notes.ipynb
+++ b/data/wrangling/wrangle_notes.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c70e648e",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('../toydata/titanic.csv')\n",
+    "df = pd.read_csv('titanic.csv')\n",
     "df.shape"
    ]
   },
