update pd agg and group notes

--- a/data/pandas_tute/agg_group/agg_and_group.ipynb
+++ b/data/pandas_tute/agg_group/agg_and_group.ipynb
@@ -2014,6 +2014,215 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ways to specify agg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../titanic.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "fare_bin",
+         "rawType": "category",
+         "type": "unknown"
+        },
+        {
+         "name": "n",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "shape",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "survive_rate",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "n_man",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "pct_man",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "fa01306c-2291-476b-bfa3-1f1cc8278e57",
+       "rows": [
+        [
+         "(-0.001, 7.91]",
+         "223",
+         "(223, 16)",
+         "0.19730941704035873",
+         "179",
+         "80.26905829596413"
+        ],
+        [
+         "(7.91, 14.454]",
+         "224",
+         "(224, 16)",
+         "0.30357142857142855",
+         "153",
+         "68.30357142857143"
+        ],
+        [
+         "(14.454, 31.0]",
+         "222",
+         "(222, 16)",
+         "0.45495495495495497",
+         "111",
+         "50.0"
+        ],
+        [
+         "(31.0, 512.329]",
+         "222",
+         "(222, 16)",
+         "0.581081081081081",
+         "94",
+         "42.34234234234234"
+        ]
+       ],
+       "shape": {
+        "columns": 5,
+        "rows": 4
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>n</th>\n",
+       "      <th>shape</th>\n",
+       "      <th>survive_rate</th>\n",
+       "      <th>n_man</th>\n",
+       "      <th>pct_man</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fare_bin</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>(-0.001, 7.91]</th>\n",
+       "      <td>223</td>\n",
+       "      <td>(223, 16)</td>\n",
+       "      <td>0.197309</td>\n",
+       "      <td>179</td>\n",
+       "      <td>80.269058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(7.91, 14.454]</th>\n",
+       "      <td>224</td>\n",
+       "      <td>(224, 16)</td>\n",
+       "      <td>0.303571</td>\n",
+       "      <td>153</td>\n",
+       "      <td>68.303571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(14.454, 31.0]</th>\n",
+       "      <td>222</td>\n",
+       "      <td>(222, 16)</td>\n",
+       "      <td>0.454955</td>\n",
+       "      <td>111</td>\n",
+       "      <td>50.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(31.0, 512.329]</th>\n",
+       "      <td>222</td>\n",
+       "      <td>(222, 16)</td>\n",
+       "      <td>0.581081</td>\n",
+       "      <td>94</td>\n",
+       "      <td>42.342342</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   n      shape  survive_rate  n_man    pct_man\n",
+       "fare_bin                                                       \n",
+       "(-0.001, 7.91]   223  (223, 16)      0.197309    179  80.269058\n",
+       "(7.91, 14.454]   224  (224, 16)      0.303571    153  68.303571\n",
+       "(14.454, 31.0]   222  (222, 16)      0.454955    111  50.000000\n",
+       "(31.0, 512.329]  222  (222, 16)      0.581081     94  42.342342"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df[\"fare_bin\"] = pd.qcut(df[\"fare\"], q=4)\n",
+    "\n",
+    "# groupby named arg\n",
+    "df.groupby([\"fare_bin\"], dropna=False, observed=False).agg(\n",
+    "    n=pd.NamedAgg(column=\"fare_bin\", aggfunc=\"count\"),\n",
+    "    shape=pd.NamedAgg(\n",
+    "        column=\"who\",\n",
+    "        aggfunc=lambda x: df.loc[x.index, :].shape,\n",
+    "    ),\n",
+    "    survive_rate=pd.NamedAgg(column=\"survived\", aggfunc=\"mean\"),\n",
+    "    n_man=pd.NamedAgg(column=\"who\", aggfunc=lambda x: x.isin([\"man\"]).sum()),\n",
+    "    pct_man=pd.NamedAgg(\n",
+    "        column=\"who\",\n",
+    "        aggfunc=lambda x: (\n",
+    "            x.isin([\"man\"]).sum() / x.count() if x.count() > 0 else np.nan\n",
+    "        )\n",
+    "        * 100,\n",
+    "    ),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
